--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "slim/slim-skeleton",
-    "description": "A Slim Framework skeleton application for rapid development",
-    "keywords": ["microframework", "rest", "router", "psr7"],
-    "homepage": "http://github.com/slimphp/Slim-Skeleton",
+    "name": "WhatisCE/backend",
+    "description": "backend api for whatisce project",
+    "keywords": ["api", "whatisce", "rest", "backend"],
+    "homepage": "https://github.com/whatisce/backend",
     "license": "MIT",
     "authors": [
         {
-            "name": "Josh Lockhart",
-            "email": "info@joshlockhart.com",
-            "homepage": "http://www.joshlockhart.com/"
+            "name": "Sepehr Mohammadi",
+            "email": "contact@thesepehrm.com",
+            "homepage": "https://thesepehrm.com/"
         }
     ],
     "require": {
