--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
     ],
     "require": {
         "php": ">=5.5.0",
-        "slim/slim": "^3.1",
-        "slim/php-view": "^2.0",
+        "slim/slim": "*",
+        "slim/extras": "*",
+        "slim/middleware": "*",
+        "j4mie/paris": "*",
         "monolog/monolog": "^1.17"
     },
     "require-dev": {
